--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,7 +1,7 @@
 # Define the port where the API gateway server would be running
 server:
   port: 8765
-
+  contextPath: userauth
 # The OAuth2 server definition that would be used to send the authorization requests to
 authserver:
     hostname: localhost
