--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -1,12 +1,12 @@
 # Define the port where the API gateway server would be running
 server:
   port: 8765
-  contextPath: userauth
+  contextPath: /userauth
 # The OAuth2 server definition that would be used to send the authorization requests to
 authserver:
     hostname: localhost
     port: 9999
-    contextPath: userauth
+    contextPath: /userauth
     
 # Define the routes which determine what URL are serviced by what applications.
 # The application/services are defined in the bootstrap.yml file of individual applications
